test/libhyperion/syntaxTests/types/contractTypeType/members/assign_function_via_contract_name_to_var.hyp
contract A {
    function f() external {}
    function g() external pure {}
}

contract B {
    function h() external {
        function() external f = A.f;
        function() external pure g = A.g;
    }
}
// ----
// TypeError 4888: (128-149): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
